Implement core logic for verifying mDoc device respones (#113)
* Generate initial mDoc device response parsing

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Simplify initial mDoc device response parsing to maximize reuse of authlete structures

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Validate mDoc parsing via Json Schema

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Stabilize mDoc parsing and validation

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Add negative test for mDoc structural validation

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Verify issuer signature over MSO and digest integrity

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Attempt to verify device key binding

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Compute session transcript for device signature verification

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Initialize options for mDoc device response verification

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Source handover opts from MdocVerificationOpts

Signed-off-by: Ingrid Kamga <xingridkamga@gmail.com>

* Enforce validity info

Signed-off-by: Ingrid Kamga <xingridkamga@gmail.com>

* Enforce presentation requirements

Signed-off-by: Ingrid Kamga <xingridkamga@gmail.com>

* Enforce trust in X5C chain

Signed-off-by: Ingrid Kamga <xingridkamga@gmail.com>

* Add comprehensive test with constructed device response

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Add negative test for expired responses

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Refine test code generated by M3

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Improve error message asserting

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Fix wrong class reference

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Address some of opencode comments

Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>

* Addr